video player background added in past 720px width for video to avoid distortion

--- a/src/components/NavBar/NavBar.scss
+++ b/src/components/NavBar/NavBar.scss
@@ -14,6 +14,7 @@
     flex-direction: row;
     justify-content: flex-end;
     gap: $gutter-tablet-desktop;
+    margin: $padding-spacing-base-unit 0;
   }
 
   &__logo {
